<resources>
    <string name="app_name">findMeAtFestival</string>
    <string name="login">LOGOWANIE</string>
    <string name="register">REJESTRACJA</string>
    <string name="loginButton">Zaloguj</string>
    <string name="loginBackToButton">Powrót do logowania</string>
    <string name="registerButton">Załóż konto</string>
    <string name="editLogin">adres e-mail</string>
    <string name="editPassword">hasło</string>
    <string name="editPasswordRepeat">powtórz hasło</string>
    <string name="editTelNumber">numer tel</string>
    <string name="editName">Imię</string>
    <string name="editLastName">Nazwisko</string>
    <string name="mainPage">Strona główna</string>
    <string name="addFestival">Dodaj festiwal</string>
    <string name="showFestival">Pokaż festiwale</string>
    <string name="addFriend">Dodaj znajomego</string>
    <string name="showFriends">Pokaż znajomych</string>
    <string name="editFestival">Edytuj festiwal</string>
    <string name="navigationDrawerOpen">Otwórz pasek nawigacji</string>
    <string name="navigationDrawerClose">Zamknij pasek nawigacji</string>
    <string name="festivals">Festiwale</string>
    <string name="friends">Znajomi</string>
    <string name="logout">Wyloguj</string>
    <string name="festivalAddButton">Dodaj festiwal</string>
    <string name="festivalCancelButton">Anuluj</string>
    <string name="festivalShowOLD">Archiwalne festiwale</string>
    <string name="festivalShowNEW">Nadchodzące festiwale</string>
    <string name="festivalOneShowAddReminder">Dodaj przypomnienie</string>
    <string name="festivalOneShowEdit">Edytuj festiwal</string>
    <string name="festivalOneShowDelete">Usuń festiwal</string>
    <string name="festivalEditName">Nazwa festiwalu:</string>
    <string name="festivalEditDate">Data festiwalu:</string>
    <string name="festivalEditAccept">Zapisz zmiany</string>
    <string name="festivalEditCancel">Anuluj</string>
    <string name="navigate">Nawiguj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>