<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="monospace"
            android:text="@string/login"
            android:textColor="#E61212"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="63dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editEmail"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="157dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editPassword"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="262dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/loginButton"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="356dp" />

        <Button
            android:id="@+id/buttonGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/registerButton"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="459dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>