<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FestivalEditActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="615dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/festivalEditName" />

            <EditText
                android:id="@+id/editTextEditFestivalName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="45dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/festivalEditDate" />

            <EditText
                android:id="@+id/editTextEditFestivalDate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:inputType="date"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="45dp"/>

            <Button
                android:id="@+id/buttonEditAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/festivalEditAccept" />

            <Button
                android:id="@+id/buttonEditCancel"
                android:layout_width="match_parent"
                android:layout_margin="25dp"
                android:layout_height="wrap_content"
                android:text="@string/festivalEditCancel" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
